# FastAPI_postgresql_demo

./: README.md  pyproject.toml
FastAPI_postgresql_demo/: main.py
FastAPI_postgresql_demo/routers/v1/: items.py  receivers.py
Scripts/: run-api-dev  run-api-dev.bat  run-api-dev.sh
scripts/: run-api-dev  run-api-dev.bat
