[project]
name = "FastAPI_postgresql_demo"
version = "0.1.0"
description = "A simple FastAPI app packaged properly for Poetry."
authors = [
    {name = "Thanutham Tuktian",email = "thanutham.tn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)"
]

[tool.poetry]
packages = [{include = "FastAPI_postgresql_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
